--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_PATH=./ nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout=10000"
   },
   "license": "ISC",
   "dependencies": {
     "12factor-config": "^2.0.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^8.0.0",
     "joi": "^14.3.1",
     "koa": "^2.7.0",
@@ -17,6 +19,7 @@
     "koa-session": "^5.12.2",
     "koa2-cors": "^2.0.6",
     "koa2-router": "^1.1.2",
+    "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
     "pg": "^7.11.0",
     "sequelize": "^5.10.0"
